--- a/index.html
+++ b/index.html
@@ -478,11 +478,6 @@
         <header class="header">
             <div class="row">
                 <div class="bg-video">
-                    <video autoplay muted playsinline loop class="bg-video__content">
-                        <source src="img/map1.webm" type="video/webm">
-                        <source src="img/map1.mp4" type="video/mp4">
-                        Your browser is not supported
-                    </video>
                 </div>
                 <div class="col-1-of-2">
                     <div class="header__text">
@@ -744,6 +739,7 @@
     <div class="overlay" id="overlay"></div>
     <script src="common.js" type="text/javascript"></script>
     <script src="home.js" type="text/javascript"></script>
+    <script src="browserDetect.js" type="text/javascript"></script>
 </body>
 
 </html>
